[package]
name = "cargo-feature-analyst"
version = "0.1.0"
authors = ["psinghal20 <psinghal20@gmail.com>"]
edition = "2018"
description = "cargo-feature-analyst is a tool written in rust to analyse the feature usage in your rust project."
license = "MIT"

[dependencies]
cargo = "0.34"
structopt = "0.2"
